<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="2dp"
      >
    <LinearLayout
        android:id="@+id/ll_container_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        >
      <ImageView
          android:id="@+id/iv_avatar_url"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_gravity="center"
          android:scaleType="fitXY"
          android:fitsSystemWindows="true"
          />
      <TextView
          android:id="@+id/tv_username"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/iv_avatar_url"
          android:padding="4dp"
          android:textAlignment="center"
          android:textStyle="bold"
          tools:text="AshishKumar468"
          />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/ll_container_user"
        android:orientation="vertical"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:padding="4dp"
          android:weightSum="2"
          >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pr_number"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_pr_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:padding="4dp"
          android:weightSum="2"
          >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pr_title"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_pr_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
      </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:padding="4dp"
          android:weightSum="2"
          >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pr_url"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_pr_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoLink="web"
            android:textColorLink="@android:color/holo_blue_dark"
            />
      </LinearLayout>

      <LinearLayout
          android:padding="4dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:weightSum="2">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_created"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@android:color/secondary_text_dark"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_closed"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@android:color/secondary_text_light"
            android:layout_height="wrap_content"/>
      </LinearLayout>
    </LinearLayout>
  </RelativeLayout>
</android.support.v7.widget.CardView>